# warthog_ekf

./: .gitignore  frames.gv
src/imu_bias_compensator/: CMakeLists.txt  README.md  package.xml
src/imu_bias_compensator/config/: gyro_bias.yaml  params.yaml
src/imu_bias_compensator/launch/: calibrate.launch  imu_republisher.launch  zupt_compensator.launch
src/imu_bias_compensator/scripts/: gyro_calibrator.py  imu_republisher.py  zupt_compensator.py
src/outdoor_waypoint_nav/: CMakeLists.txt  package.xml  run.sh  run_continuous.sh
src/outdoor_waypoint_nav/launch/include/: collect_goals.launch  collect_goals_sim.launch  gazebo.launch  gps.launch  heading_calibration.launch  heading_calibration_sim.launch  imu.launch  laser.launch  localization_run.launch  localization_run_sim.launch  safety_node.launch  send_goals.launch  send_goals_sim.launch  test_safety_node.launch  test_send_goals.launch  warthog_bringup.launch
src/outdoor_waypoint_nav/launch/outdoor/: eval_outdoor.launch  joy_launch_control.launch  test.launch  (+2 more)
src/outdoor_waypoint_nav/params/: bounding_box_filter.yaml  ekf_params.yaml  ekf_params_sim.yaml  ekf_se_map.yaml  ekf_se_odom.yaml  navsat_params.yaml  navsat_params_sim.yaml  outdoor_params.yaml  warthog_control_real_extras.yaml
src/outdoor_waypoint_nav/results/: ekf_path_outdoor_1777019723.csv  ekf_path_sim_1777002326.csv  ekf_path_sim_1777003613.csv  ekf_path_sim_1777007145.csv  ekf_path_sim_1777007496.csv  result_outdoor_1777019723.yaml  result_sim_1777002326.yaml  result_sim_1777003613.yaml  result_sim_1777007145.yaml  result_sim_1777007496.yaml
src/outdoor_waypoint_nav/rviz_config/: model.rviz  outdoor_waypoint_nav_continuous_rviz.rviz  outdoor_waypoint_nav_mapping_rviz.rviz  outdoor_waypoint_nav_rviz.rviz  real.rviz
src/outdoor_waypoint_nav/scripts/: encoder_odometry_node.py  gps_covariance_relay.py  imu_covariance_log.py  imu_covariance_relay.py  joy_launch_control.py  joy_launch_control_continuous.py  joy_launch_control_mapping.py  keyboard_to_joy.py  path_node.py  plot_results.py  square_eval.py
src/outdoor_waypoint_nav/src/: calibrate_heading.cpp  collect_gps_waypoints.cpp  gps_waypoint.cpp  gps_waypoint_continuous1.cpp  gps_waypoint_continuous2.cpp  gps_waypoint_mapping.cpp  plot_gps_waypoints.cpp  publish_waypoints_from_file.cpp  safety_node.cpp
src/outdoor_waypoint_nav/waypoint_files/: points_outdoor.txt  points_sim.txt
(+194 files in other folders)
