<?xml version="1.0"?>
<package format="2">
  <name>outdoor_waypoint_nav</name>
  <version>0.0.0</version>
  <description>The outdoor_waypoint_nav package</description>

  <maintainer email="nicholas.c.charron@gmail.com">Nick</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>robot_localization</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <exec_depend>hector_mapping_nav</exec_depend>
  <exec_depend>warthog_control</exec_depend>
  <exec_depend>warthog_customization</exec_depend>

  <export/>
</package>